MODDCB-251 Add request body to /dcb/shadow-locations/refresh